--- a/package.json
+++ b/package.json
@@ -46,12 +46,15 @@
     "not ie <= 10"
   ],
   "dependencies": {
-    "@ant-design/icons": "^4.8.0",
-    "@ant-design/pro-components": "^2.3.57",
+    "@ant-design/icons": "^5.0.1",
+    "@ant-design/pro-components": "^2.4.14",
     "@ant-design/use-emotion-css": "1.0.4",
-    "@umijs/route-utils": "^2.2.2",
-    "antd": "^5.2.2",
+    "@umijs/route-utils": "^4.0.1",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-react": "^1.0.6",
+    "antd": "^5.4.7",
     "classnames": "^2.3.2",
+    "immutability-helper": "^3.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "omit.js": "^2.0.2",
@@ -59,6 +62,8 @@
     "rc-util": "^5.27.2",
     "react": "^18.2.0",
     "react-dev-inspector": "^1.8.4",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0"
   },
